# commerce-mcp

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.json
python/: README.md  pyproject.toml
python/commerce_mcp/: __init__.py  __main__.py  api.py  config.py  server.py
python/commerce_mcp/integrations/ai_sdk/: __init__.py
python/commerce_mcp/integrations/anthropic_sdk/: __init__.py
python/commerce_mcp/integrations/langchain/: __init__.py
python/commerce_mcp/shared/: errors.py  field_filtering.py  transform.py
python/commerce_mcp/tools/: __init__.py  registry.py
python/commerce_mcp/tools/approval_flow/: __init__.py  admin_functions.py  associate_functions.py  functions.py  schemas.py
python/commerce_mcp/tools/approval_rule/: __init__.py  admin_functions.py  associate_functions.py  functions.py  schemas.py
python/commerce_mcp/tools/associate_role/: __init__.py  admin_functions.py  associate_functions.py  functions.py  schemas.py
python/commerce_mcp/tools/bulk/: __init__.py  functions.py  prompts.py  schemas.py
python/commerce_mcp/tools/business_unit/: __init__.py  functions.py  prompts.py  schemas.py
python/commerce_mcp/tools/cart_discount/: __init__.py  functions.py  prompts.py  schemas.py
python/commerce_mcp/tools/carts/: __init__.py  admin_functions.py  as_associate_functions.py  base_functions.py  (+5 more)
python/tests/: conftest.py  test_main.py
python/tests/integrations/: test_modelcontextprotocol.py
python/tests/shared/: test_field_filtering.py  test_transform.py
python/tests/tools/: test_registry.py
(+393 files in other folders)
