[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commerce-mcp"
version = "0.1.0"
description = "Commercetools MCP server and agent toolkit adapters — Python edition"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
anthropic = ["anthropic>=0.40"]
all = ["commerce-mcp[langchain,anthropic]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
commerce-mcp = "commerce_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["commerce_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
